<resources>
    <string name="app_name">HeroApps</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_profile">Profile</string>
    <string name="empty_favorite">Tidak ada list favorite.</string>
    <string name="search_text">Masukan hero yang ingin dicari</string>
    <string name="about_me">Tentang saya</string>
    <string name="back">Back</string>

    <string name="favorite">Favorite</string>
    <string name="delete_favorite">Remove from Favorite</string>
    <string name="add_favorite">Add to Favorite</string>
    <string name="empty_data">Data Kosong</string>

    <string name="title_home">Home</string>
    <string name="email_author">dityapra1234@gmail.com</string>
    <string name="name_author">Andi Putra Aditya Pratama</string>
</resources>